[package]
name = "serial_tester"
version = "0.1.0"
authors = ["Matvei <klimatt.gu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "4.3.0"
tokio-util = { version = "0.2.0", features = ["codec"], default-features = false }
futures = "0.3.1"
tokio = { version = "0.2.0", features = ["macros", "time"], default-features = false }
bytes = "0.5"
rand = "0.7.3"
clap = "3.0.0-beta.1"
